--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+    <style type="text/css">
+      p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px 'SF Pro'}
+    </style>
   </head>
   <body>
     <div id="app"></div>
